# score-addon-airwindows

./: .gitmodules  CMakeLists.txt  score_addon_airwindows.cpp  score_addon_airwindows.hpp
Airwindows/: AirwindowsBase.cpp  Library.hpp  ProcessFactory.hpp  ProcessMetadata.hpp  ProcessModel.cpp  ProcessModel.hpp  ProcessModelSerialization.cpp
Airwindows/Executor/: Component.cpp  Component.hpp
